# Port-and-Adapters

./: .env.example  .gitignore  ADAPTER_GUIDE.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  start-dev.sh
adapters/: __init__.py  factory.py
adapters/database/: __init__.py  base.py  mysql_adapter.py  postgres_adapter.py
app/: dependencies.py  main.py
app/core/: config.py
app/routers/: __init__.py  books.py
app/schema/: books.py
db/mysql/: .env.example  base_class.py  db_base.py  session.py
db/mysql/alembic/: env.py
db/mysql/alembic/versions/: c9f8c8d08b0b_test.py
db/mysql/models/: __init__.py  book.py
db/postgres/: .env.example  base_class.py  db_base.py  session.py
db/postgres/alembic/: env.py
db/postgres/alembic/versions/: 3765ce2b4427_test.py
db/postgres/models/: __init__.py  book.py
